# halo2-kzg-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linux.yml  macos.yml  rust.yml
src/: constants.rs  errors.rs  lib.rs  main.rs  utils.rs
src/cli/: contract.rs  execute.rs  gates_cmd.rs  mod.rs  prove_and_verify_cmd.rs  prove_cmd.rs  verify_cmd.rs
src/cli/fs/: common_reference_string.rs  mod.rs
